--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "npm ci --prefix Prototype-1",
-  "buildCommand": "npm run build --prefix Prototype-1",
-  "outputDirectory": "Prototype-1/dist"
+  "installCommand": "npm ci --prefix Prototype",
+  "buildCommand": "npm run build --prefix Prototype",
+  "outputDirectory": "Prototype/dist"
 }
