--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "installCommand": "npm ci --prefix Prototype",
   "buildCommand": "npm run build --prefix Prototype",
+  "outputDirectory": "Prototype/dist",
+  "installCommand": "npm ci --prefix Prototype",
+  "buildCommand": "npm run build --prefix Prototype",
   "outputDirectory": "Prototype/dist"
 }
